--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -9,10 +9,21 @@
 
     <RelativeLayout
         android:id="@+id/rel_main"
-        android:background="@color/light_blue"
+        android:background="@color/darkGrey"
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
+        <ImageView
+        android:id="@+id/ic_back"
+        android:layout_width="45dp"
+        android:layout_height="30dp"
+
+        android:padding="6dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="1dp"
+        android:layout_centerVertical="true"
+
+        android:src="@drawable/toolbar_ico_back" />
 
         <TextView
             android:id="@+id/headerLable"
@@ -20,8 +31,9 @@
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:textSize="17sp"
-           android:layout_alignParentStart="true"
-            android:layout_marginLeft="80dp"
+            android:layout_toEndOf="@+id/ic_back"
+
+            android:layout_marginLeft="1dp"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             >
