--- a/app/src/main/res/layout/stats_title_bar.xml
+++ b/app/src/main/res/layout/stats_title_bar.xml
@@ -5,11 +5,22 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:background="@color/darkGrey"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/ic_back"
+        android:layout_width="45dp"
+        android:layout_height="30dp"
+
+        android:padding="6dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="1dp"
+        android:layout_centerVertical="true"
+
+        android:src="@drawable/toolbar_ico_back" />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:text="Usage Status"
-        android:drawableLeft="@drawable/baseline_query_stats_24"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="wrap_content"
         android:drawablePadding="5dp"
