--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -62,6 +62,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:popupElevation="7dp"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"
+                android:popupBackground="@drawable/non_active_round"
                 android:padding="14dp"
                 android:id="@+id/spinnerUserType"/>
 
