--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -10,7 +10,14 @@
         android:layout_height="match_parent"
         android:background="@drawable/add_user_gradient"
         tools:context=".LoginActivity">
-
+        <ProgressBar
+            android:id="@+id/progressBar_cyclic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:minWidth="50dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
         <LinearLayout
             android:id="@+id/blockingInfoLayout"
             android:layout_width="match_parent"
