--- a/app/src/main/res/layout/activity_uses_stats.xml
+++ b/app/src/main/res/layout/activity_uses_stats.xml
@@ -10,6 +10,8 @@
         android:background="@color/appBackground"
         tools:context=".ui.stats.UsesStatsActivity">
 
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/LayoutButtonHolder"
             android:layout_width="match_parent"
@@ -72,6 +74,72 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/startDateAndEndDateConstarints"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/LayoutButtonHolder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/one"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:hint="Start Date"
+            android:padding="10dp"
+            android:editable="false"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            >
+        </androidx.appcompat.widget.AppCompatEditText>
+
+
+            <ImageView
+                android:id="@+id/calender_icon_start_date"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/cal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/one"
+               />
+
+
+         <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/two"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:hint="End Date"
+             android:padding="10dp"
+             android:editable="false"
+             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:background="@color/white"
+                app:layout_constraintLeft_toRightOf="@id/calender_icon_start_date"
+                >
+            </androidx.appcompat.widget.AppCompatEditText>
+
+          <ImageView
+              android:id="@+id/calender_icon_end_date"
+              android:layout_width="40dp"
+              android:layout_height="40dp"
+                android:background="@drawable/cal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/two" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/statsAppsList"
             android:layout_width="match_parent"
@@ -79,7 +147,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/LayoutButtonHolder" />
+            app:layout_constraintTop_toBottomOf="@+id/startDateAndEndDateConstarints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
