Out of memory issue resolved and Stats Implemented

--- a/app/src/main/res/layout/activity_uses_stats.xml
+++ b/app/src/main/res/layout/activity_uses_stats.xml
@@ -23,11 +23,12 @@
                 android:id="@+id/btn_today"
                 android:layout_width="70dp"
                 android:layout_height="45dp"
-                android:textSize="10sp"
                 android:background="@drawable/active_round"
                 android:padding="2dp"
-                android:textColor="@color/white"
                 android:text="Today"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,12 +36,13 @@
                 android:id="@+id/btn_yesterday"
                 android:layout_width="70dp"
                 android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
                 android:background="@drawable/non_active_round"
                 android:padding="2dp"
-                android:textSize="10sp"
-                android:layout_marginLeft="20dp"
-                android:textColor="@color/white"
                 android:text="YesterDay"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_today"
                 app:layout_constraintTop_toTopOf="@+id/btn_last_week" />
 
@@ -48,12 +50,13 @@
                 android:id="@+id/btn_last_week"
                 android:layout_width="70dp"
                 android:layout_height="45dp"
-                android:text="Last Week"
+                android:layout_marginLeft="20dp"
                 android:background="@drawable/non_active_round"
                 android:padding="2dp"
-                android:textSize="10sp"
+                android:text="Last Week"
                 android:textColor="@color/white"
-                android:layout_marginLeft="20dp"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_yesterday"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,12 +64,13 @@
                 android:id="@+id/btn_last_month"
                 android:layout_width="70dp"
                 android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
                 android:background="@drawable/non_active_round"
                 android:padding="2dp"
-                android:textSize="10sp"
-                android:textColor="@color/white"
                 android:text="Last Month"
-                android:layout_marginLeft="20dp"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_last_week"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
